<resources>
    <string name="app_name">Popular Movies</string>
    <string name="movie_details_activity_title"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_movie_details">Movie Details</string>
    <string name="movie_backdrop">Movie Backdrop</string>

    <string name="loading">Loading...</string>
    <string name="movie_synopsis">Movie Synopsis</string>
    <string name="action_filter">Filter</string>
    <string name="action_filter_popular">Popular</string>
    <string name="action_filter_top_rated">Top Rated</string>
    <string name="action_filter_favorites">Favorites</string>

    <string name="average_placeholder">%1$s/10</string>

    <string name="no_internet">
        No Internet Connection! Please, turn on your Wi-Fi or cellular data and try again.
    </string>

    <string name="no_favorites">
        You don\'t have movies as favorites. Add some and they will appear here!
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_overview">Overview Text</string>
    <string name="movie_release_date">01/01/2017</string>
    <string name="movie_vote_average">5/10</string>
    <string name="connection_error">Problem to Fetch Data!</string>
    <string name="try_again">Try Again</string>
    <string name="videos_title">Trailers</string>
    <string name="reviews_title">Reviews</string>
    <string name="review_read_more">Read More</string>

    <string name="no_reviews_message">No Reviews Found!</string>

    <string name="message_add_favorite_success">Added to Favorites</string>
    <string name="message_remove_favorite_success">Removed From Favorites</string>
    <string name="message_favorite_error">Error! Try Again.</string>
    <string name="rating_label">Rating</string>
    <string name="release_date_label">Release Date</string>

    <string name="api_poster_size">w342/</string>
    <string name="api_backdrop_size">w780/</string>
    <string name="transition_movie_cover">MovieCover</string>
    <string name="no_videos">No Videos for This Movie</string>
    <string name="no_reviews">No Reviews for This Movie</string>

</resources>
