<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/collapsing_toolbar_margin"
            app:expandedTitleMarginStart="@dimen/collapsing_toolbar_margin"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:titleEnabled="false"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/movie_backdrop_imageview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/collapsing_toolbar_imageview_height"
                android:contentDescription="@string/movie_backdrop"
                android:minHeight="@dimen/movie_backdrop_height"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_video"
                app:layout_collapseMode="parallax" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/layout_image_scrim" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                app:contentInsetStart="72dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_back_24dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:behavior_overlapTop="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/movie_cover_imageview"
                    android:layout_width="@dimen/details_cover_width"
                    android:layout_height="@dimen/details_cover_height"
                    android:layout_marginEnd="@dimen/cover_margin"
                    android:layout_marginRight="@dimen/cover_margin"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movie_title_textview"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/text_margin"
                        tools:text="Nome Filme" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/rating_label" />

                    <TextView
                        android:id="@+id/movie_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/text_margin"
                        tools:text="@string/movie_vote_average" />

                    <TextView
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/release_date_label" />

                    <TextView
                        android:id="@+id/movie_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/movie_release_date" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/headline_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:text="@string/movie_synopsis" />

                <TextView
                    android:id="@+id/movie_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/movie_overview" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/videos_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <FrameLayout
                android:id="@+id/reviews_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_as_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        style="@style/FabGrey"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar_layout"
        app:layout_anchorGravity="bottom|end|right"
        app:srcCompat="@drawable/ic_star_border_24dp" />

</android.support.design.widget.CoordinatorLayout>